[package]
name = "apache-echarts-wrapper"
version = "0.0.1"
edition = "2024"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Wrapper for Apache ECharts server-side rendering"
keywords = ["ECharts", "javascript", "web"]
repository = "https://github.com/ArseniiRudenko/apache-echarts-wrapper"
readme = "README.md"
license = "MIT"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
