[package]
name = "apache-echarts-wrapper"
version = "0.0.4"
edition = "2024"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Wrapper for Apache ECharts server-side rendering"
keywords = ["ECharts", "javascript", "web"]
repository = "https://github.com/ArseniiRudenko/apache-echarts-wrapper"
readme = "README.md"
license = "MIT"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sailfish = { version = "0.9.0", features = ["derive", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tiny_http = "0.12"
open = "5.0"
