[package]
name = "apache-echarts-wrapper"
version = "0.0.7"
edition = "2024"
authors = ["Arsenii Rudenko <inbox@arudenko.work>"]
description = "Wrapper for Apache ECharts server-side rendering"
keywords = ["ECharts", "javascript", "web"]
repository = "https://github.com/ArseniiRudenko/apache-echarts-wrapper-rust"
readme = "README.md"
license = "MIT"

[features]
default = []
time_axis = ["time"]
chrono_axis= ["chrono"]



[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sailfish = { version = "0.9.0", features = ["derive", "json"] }
uuid = { version = "1.17.0", features = ["v4"] }
time = { version = "0.3", features = ["serde"] , optional = true }
chrono = { version = "0.4.41", features = ["serde"], optional = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
tiny_http = "0.12"
open = "5.0"
time = { version = "0.3", features = ["serde","macros","formatting"]}
chrono = "0.4.41"